--- a/src/app/component/registration/registration.component.css
+++ b/src/app/component/registration/registration.component.css
@@ -1,24 +1,11 @@
+.matcard{
+    height: 700px;
+    width: 400px;
+    margin-left: 400px;
+    background-color:rgb(169, 169, 169);
 
-body {
-    padding-top:50px;
 }
-fieldset {
-    border: thin solid #ccc; 
-    border-radius: 4px;
-    padding: 20px;
-    padding-left: 40px;
-    background: #fbfbfb;
-}
-legend {
-   color: #678;
-}
-.form-control {
-    width: 95%;
-}
-label small {
-    color: #678 !important;
-}
-span.req {
-    color:maroon;
-    font-size: 112%;
+.input{
+    width: 306px;
+
 }
