login,registration and forgetpassword integration with backend completed

--- a/src/app/component/forgetpassword/forgetpassword.component.html
+++ b/src/app/component/forgetpassword/forgetpassword.component.html
@@ -1,5 +1,5 @@
 <div fxLayout="row" fxLayoutAlign="startcenter">
- <mat-card class="login">
+ <mat-card class="forgetpassword"  layout="row" layout-align="center center">
   
        <mat-card-title class="titel">
            <h1>Fundoonotes</h1>
@@ -11,15 +11,15 @@
    <div>
      <mat-form-field appearance="outline" class="input-style">
        <mat-label>Email</mat-label>
-       <!-- <mat-error *ngIf="email.invalid"> {{ emailValidation() }}</mat-error> -->
-       <input type="email" matInput placeholder="Enter your email"   >
+       <mat-error *ngIf="email.invalid"> {{ emailValidation() }}</mat-error>
+       <input type="email" matInput placeholder="Enter your email"  [(ngModel)]="forget.email" [formControl]="email">
         <mat-icon matSuffix>email</mat-icon> 
        <mat-hint>Email</mat-hint>
      </mat-form-field>
    </div>
    <div>
-     <button mat-raised-button  color="primary" class="button">SendLink</button>
-   </div>
+    <button mat-raised-button  color="primary" (click)="forgetNow()" class="button">SendLink</button>
+  </div>
  </mat-card>
 
 </div>
