login ,registration,forgetpassword integration with backend completed

--- a/src/app/component/forgetpassword/forgetpassword.component.css
+++ b/src/app/component/forgetpassword/forgetpassword.component.css
@@ -1,27 +1,31 @@
-.login {
-    margin-left: 430px;
-    width: 450px;
-    height: 400px;
-    margin-top: 190px;
-    background-color:darkgray;
-  }
+.matcard{
+  margin-left: 350px;
+  width: 500px;
+  height: 300px;
+  margin-top: 75px;
+  background-color:rgb(169, 169, 169);
+}
+.titel{
+  width: 20px;
+  height: 20px;
+  margin-left: 30%;
  
-  .titel{
-    width: 20px;
-    height: 20px;
-    margin-left: 30%;
-    gap: 20px;
-    color-adjust: gray;
-    margin-top: 25px;
-  }
-  .input-style{
-    margin-left: 50px;
-    height: 100px;
-    width: 350px;
-    margin-top: 20px;
-  }
-.button{
-  height: 45px;
-  width: 92px;
+  color-adjust: gray;
+  margin-top: 25px;
+}
+.input-style{
   margin-left: 50px;
+  height: 100px;
+  width: 350px;
+  margin-top: 20px;
+}
+.button{
+height: 45px;
+width: 115px;
+margin-left: 50px;
+}
+.forget{
+margin-left:144px;
+margin-top: 72px;
+
 }
