--- a/src/app/component/forgetpassword/forgetpassword.component.html
+++ b/src/app/component/forgetpassword/forgetpassword.component.html
@@ -1,25 +1,22 @@
-<div fxLayout="row" fxLayoutAlign="startcenter">
- <mat-card class="forgetpassword"  layout="row" layout-align="center center">
-  
-       <mat-card-title class="titel">
-           <h1>Fundoonotes</h1>
-         </mat-card-title>
-         <mat-card-subtitle class="titel">
-           <h1 style="margin-top: 70px;margin-left: -20px">ForgotPassword</h1>
-         </mat-card-subtitle>
-  
-   <div>
-     <mat-form-field appearance="outline" class="input-style">
-       <mat-label>Email</mat-label>
-       <mat-error *ngIf="email.invalid"> {{ emailValidation() }}</mat-error>
-       <input type="email" matInput placeholder="Enter your email"  [(ngModel)]="forget.email" [formControl]="email">
+  <mat-card class="matcard">
+    <mat-card-title class="titel">
+      <h1>FundooNotes</h1>
+    </mat-card-title>
+    <mat-card-subtitle class="titel">
+      <h1 style="margin-top: 50px">ForgetPassword</h1>
+    </mat-card-subtitle>
+    <div>
+      <mat-form-field appearance="outline" class="input-style">
+        <mat-label>email</mat-label>
+        <mat-error *ngIf="email.invalid"> {{ emailValidation() }}</mat-error>
+        <input type="email" matInput placeholder="Enter your email"  [(ngModel)]="forget.email" [formControl]="email">
         <mat-icon matSuffix>email</mat-icon> 
        <mat-hint>Email</mat-hint>
      </mat-form-field>
-   </div>
-   <div>
-    <button mat-raised-button  color="primary" (click)="forgetNow()" class="button">SendLink</button>
-  </div>
- </mat-card>
-
-</div>
+    </div>
+    <div>
+      <button mat-raised-button color="primary" style="margin-left: 50px" class="button" (click)="forgetNow()"
+         >Confirm </button>    
+    </div>
+  </mat-card>
+ 
