--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,10 +1,10 @@
 
-  <mat-card class="login">
+  <mat-card class="matcard">
     <mat-card-title class="titel">
-      <h1>Fundoo</h1>
+      <h1>FundooNotes</h1>
     </mat-card-title>
     <mat-card-subtitle class="titel">
-      <h1 style="margin-top: 70px;margin-left: 37px">Login</h1>
+      <h1 style="margin-top: 30px;margin-left: 20px">Login</h1>
     </mat-card-subtitle>
     <div>
       <mat-form-field appearance="outline" class="input-style">
@@ -34,7 +34,8 @@
     </div>
     <div>
       <nav class="forget">
-        <a routerLink="/forgotPassword" routerLinkActive="active">ForgetPassword...?</a>
+        <button mat-raised-button color="primary" style="margin-left: 50px" routerLink="/forgetPassword"
+        class="button">ForgetPassword</button>
       </nav>
     </div>
   </mat-card>
