--- a/src/app/component/login/login.component.css
+++ b/src/app/component/login/login.component.css
@@ -1,8 +1,8 @@
-.login {
-    margin-left: 430px;
-    width: 450px;
-    height: 550px;
-    margin-top: 190px;
+.matcard{
+    margin-left: 330px;
+    width: 500px;
+    height: 500px;
+    /* margin-top: 50px; */
     background-color:darkgray;
   }
  
@@ -22,11 +22,11 @@
   }
 .button{
   height: 45px;
-  width: 92px;
+  width: 115px;
   margin-left: 50px;
 }
 .forget{
   margin-left:144px;
-  margin-top: 72px;
+  margin-top: 50px;
 
 }
