--- a/src/app/component/registration/registration.component.css
+++ b/src/app/component/registration/registration.component.css
@@ -1,3 +1,17 @@
+/* .example-form {
+    min-width: 150px;
+    max-width: 500px;
+    width: 100%;
+  }
+  
+  .input-style{
+    margin-left: 50px;
+    height: 100px;
+    width: 350px;
+    margin-top: 20px;
+  }  .example-full-width {
+    width: 100%;
+  }
 .matcard{
     height: 700px;
     width: 400px;
@@ -7,5 +21,50 @@
 }
 .input{
     width: 306px;
+
+}
+.button{
+    height: 45px;
+    width: 92px;
+    margin-left: 50px;
+  }
+  .Login{
+    margin-left:50px;
+    margin-top: 72px;
+  
+  } */
+  .matcard{
+    margin-left: 300px;
+    width: 500px;
+    height: 560px;
+    /* margin-top: 190px; */
+    /* margin-left: 50px;
+    margin-right: 500px; */
+    background-color:rgb(231, 241, 169);
+  }
+ 
+  .titel{
+    width: 500px;
+    height: 20px;
+    margin-left: 30%;
+    margin-right: 50%;
+   
+    color-adjust: gray;
+    margin-top: 25px;
+  }
+  .input-style{
+    margin-left: 50px;
+    height: 85px;
+    width: 350px;
+    margin-top: 20px;
+  }
+.button{
+  height: 45px;
+  width: 92px;
+  margin-left: 50px;
+}
+.forget{
+  margin-left:144px;
+  margin-top: 72px;
 
 }
