[shaiksha]refractor.notes,labels,hoovers,dashboard changes done

--- a/src/app/component/forgetpassword/forgetpassword.component.css
+++ b/src/app/component/forgetpassword/forgetpassword.component.css
@@ -1,31 +1,25 @@
-.matcard{
-  margin-left: 350px;
+.card{
+  
   width: 500px;
   height: 300px;
-  margin-top: 75px;
-  background-color:rgb(169, 169, 169);
+  margin-top: 175px;
+  background-color:rgb(247, 199, 199);
 }
-.titel{
+.subtitle{
   width: 20px;
   height: 20px;
   margin-left: 30%;
- 
-  color-adjust: gray;
+  color-adjust: rgb(6, 231, 18);
   margin-top: 25px;
 }
-.input-style{
+.formfeild{
   margin-left: 50px;
   height: 100px;
   width: 350px;
   margin-top: 20px;
 }
 .button{
-height: 45px;
+height: 60px;
 width: 115px;
 margin-left: 50px;
-}
-.forget{
-margin-left:144px;
-margin-top: 72px;
-
 }
