--- a/src/app/component/forgetpassword/forgetpassword.component.html
+++ b/src/app/component/forgetpassword/forgetpassword.component.html
@@ -1,22 +1,26 @@
-  <mat-card class="matcard">
-    <mat-card-title class="titel">
+<div fxLayout="row" fxLayoutAlign="center center">
+  <mat-card class="card">
+    <!-- ------------------------(Appname)--------------------------- -->
+    <mat-card-title class="subtitle">
       <h1>FundooNotes</h1>
     </mat-card-title>
-    <mat-card-subtitle class="titel">
+    <!-- -------------------------(Maintitle)-------------------------- -->
+    <mat-card-subtitle class="subtitle">
       <h1 style="margin-top: 50px">ForgetPassword</h1>
     </mat-card-subtitle>
+    <!-- ------------------------(Email)--------------------------------- -->
     <div>
-      <mat-form-field appearance="outline" class="input-style">
+      <mat-form-field appearance="outline" class="formfeild">
         <mat-label>email</mat-label>
-        <mat-error *ngIf="email.invalid"> {{ emailValidation() }}</mat-error>
-        <input type="email" matInput placeholder="Enter your email"  [(ngModel)]="forget.email" [formControl]="email">
-        <mat-icon matSuffix>email</mat-icon> 
-       <mat-hint>Email</mat-hint>
-     </mat-form-field>
+        <mat-error *ngIf="email.invalid"> {{ emailValidation()}}</mat-error>
+        <input type="email" matInput placeholder="Enter your email" [(ngModel)]="forget.email" [formControl]="email">
+        <mat-icon matSuffix> mail_outline</mat-icon>
+        <mat-hint>Email</mat-hint>
+      </mat-form-field>
     </div>
-    <div>
-      <button mat-raised-button color="primary" style="margin-left: 50px" class="button" (click)="forgetNow()"
-         >Confirm </button>    
+    
+    <div class="button">
+      <button mat-raised-button color="primary"  (click)="onClick()">Confirm </button>
     </div>
   </mat-card>
- 
+</div>
