--- a/src/app/component/addlabel/addlabel.component.html
+++ b/src/app/component/addlabel/addlabel.component.html
@@ -5,4 +5,11 @@
       </div>
       <mat-icon matChipRemove (click)="onDelete(labels)">cancel</mat-icon>
   </mat-chip>
+  <div *ngIf="reminder!=null">
+    <mat-chip>
+     {{reminder | date:'MMMM d'}}
+     {{reminder | date:'shortTime'}}
+     <mat-icon matChipRemove (click)="onDeleteRem()">cancel</mat-icon>
+   </mat-chip>
+   </div>
 </mat-chip-list>
